# session-to-song

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: defaults.json
content/examples/: README.md  example_1_lyrics.txt  example_1_music_prompt.txt  example_1_pulse.txt  example_2_input.txt  example_2_pulse.txt  hermes_session_sample.txt
content/input/: sample_day.txt
docs/: no-terminal-install.md  setup.md  use-genre-redesign.md  x-manifesto-slideshow.md
mockups/: perfect-ui.html
scripts/: Check Session to Song.bat  Install Morning Alarm Task.bat  Install Session to Song.bat  Remove Morning Alarm Task.bat  Start Session to Song.bat  __init__.py  install_morning_alarm_cron.sh  make_manifesto_slideshow.py  optional_music_wrapper.py  push_and_celebrate.ps1  remove_morning_alarm_cron.sh  run_demo.py  run_morning_alarm.ps1  test_music_live.py
src/: __init__.py
src/session_to_song/: __init__.py  alarm_slots.py  cli.py  config_loader.py  domain.py  env_loader.py  generator.py  models.py  openclaw_memory.py  playback.py  project_filter.py  providers.py  video.py  web_app.py
src/session_to_song/adapters/: __init__.py  common.py  hermes.py  openclaw.py  text_file.py
src/session_to_song/connectors/: __init__.py  openclaw_sessions.py
src/session_to_song/delivery/: __init__.py  filesystem.py
src/session_to_song/pipeline/: __init__.py  (+2 more)
tests/: test_generator.py  test_music_providers.py  test_openclaw_memory.py  test_session_to_song.py  test_video_prompt_pack.py
webui/: app.js  index.html  styles.css
(+14 files in other folders)
